# pixl

./: .gitignore  LICENSE  Makefile.toml  Procfile  README.md
docs/: phase4-completion-report.md
docs/plans/: development-plan.md  server-implementation.md  viewer-implementation.md
docs/specs/: pixel-book-format.md  server-api.md  system-architecture.md  viewer-application.md
mcp/: Cargo.toml  README.md  test-mcp.sh
mcp/src/: main.rs
scripts/: create-test-book.sh  simple-test.sh  update-test-book.sh
server/: Cargo.toml  README.md  tasks.toml
server/src/: lib.rs  main.rs
server/src/api/: books.rs  events.rs  mod.rs  path.rs
server/src/models/: errors.rs  mod.rs  operations.rs  pixel_book.rs
server/src/services/: drawing_service.rs  event_service.rs  file_service.rs  mod.rs
server/src/utils/: validation.rs
viewer/: Cargo.toml  bacon.toml  tasks.toml
viewer/src/: lib.rs  main.rs
viewer/src/app/: input.rs  mod.rs  state.rs  viewer.rs
viewer/src/models/: events.rs  mod.rs  pixel_book.rs
viewer/src/rendering/: checkerboard.rs  mod.rs  renderer.rs  scaling.rs
viewer/src/services/: api_client.rs  event_client.rs  file_dialog.rs  mod.rs
viewer/src/utils/: color.rs  mod.rs
