[package]
name = "pixl-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
poem-mcpserver = "0.2.4"
poem = { version = "3.1", features = ["sse"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
dirs = "5.0"
