[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = { version = "3.1", features = ["sse"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
futures-util = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"