[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"